[package]
name = "sliding-blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
itertools = "0.13.0"
pathfinding = "4.10.0"
tinyset = "0.4.15"
rustc-hash = "2.0.0"
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib","rlib"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "example"
harness = false

[profile.test]
inherits = "release"
