[package]
name = "sliding-blocks"
version = "0.1.0"
edition = "2021"
keywords = ["puzzle", "sliding-blocks", "puzzle-solver", "game"]
categories = ["games"]
repository = "https://github.com/lumi-a/sliding-blocks"
authors = ["lumi-a"]
description = "Solver for sliding-block puzzles"
license = "MIT OR Apache-2.0"

[dependencies]
bitvec = "1.0.1"
itertools = "0.13.0"
pathfinding = "4.10.0"
tinyset = { version = "0.4.15", default-features = false }
wasm-bindgen = "0.2.92"
vec-collections = "0.4.3"
rustc-hash = "2.0.0"
smallvec = "1.13.2"

[lib]
crate-type = ["cdylib","rlib"]

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3"

[[bench]]
name = "example"
harness = false

[profile.test]
inherits = "release"
